@@ -1,6 +1,6 @@
 REM		GMT EXAMPLE 17
 REM
-REM		$Id: job17.bat,v 1.8 2008-02-21 22:36:40 remko Exp $
+REM		$Id: job17.bat,v 1.9 2008-11-29 23:44:56 guru Exp $
 REM
 REM Purpose:	Illustrates clipping of images using coastlines
 REM GMT progs:	grd2cpt, grdgradient, grdimage, pscoast, pstext
@@ -19,7 +19,7 @@ grdimage india_geoid.nc -Iindia_geoid_i.grd -JM6.5i -Cgeoid.cpt -P -K -U"Example
 
 REM Then use pscoast to initiate clip path for land
 
-pscoast -R60/90/-10/25 -J -O -K -Dl -Gc >> example_17.ps
+pscoast -Rindia_geoid.nc -J -O -K -Dl -Gc >> example_17.ps
 
 REM Now generate topography image w/shading
 
